uh will it work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="bg bg3">
           <div class="caption">
-    <span class="border"> Does yogi work??</span>
+    <span class="border"> Yogi might work?</span>
           </div>
     </div>
 
